--- a/backend/composer.json
+++ b/backend/composer.json
@@ -41,6 +41,9 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [
+            "app/Http/Helpers/helpers.php"
         ]
     },
     "autoload-dev": {
