--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,18 @@ services:
     volumes:
       - './backend:/srv'
 
+  node:
+    image: node:lts
+    working_dir: /app
+    volumes:
+      - './backend:/app'
+      - 'node_modules:/app/node_modules'
+    command: sh -c 'npm install && npm run dev -- --host'
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    ports:
+      - 5173:5173
+
   # database
   database:
     container_name: 'database'
@@ -31,8 +43,15 @@ services:
       MYSQL_DATABASE: docker
       MYSQL_USER: docker
       MYSQL_PASSWORD: docker
-      TZ: Asia/Tokyo
     volumes:
       - ./docker/database/data:/var/lib/mysql
     ports:
       - 3306:3306
+
+  mailpit:
+    image: axllent/mailpit
+    ports:
+      - 8025:8025
+
+volumes:
+  node_modules:
