--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     command: bash -c 'composer install && php-fpm'
     volumes:
       - './backend:/srv'
+#      - 'vendor:/srv/vendor'
 
   node:
     image: node:lts
@@ -28,7 +29,7 @@ services:
     volumes:
       - './backend:/app'
       - 'node_modules:/app/node_modules'
-    command: sh -c 'npm install && npm run dev -- --host'
+    command: sh -c 'npm install && npm run dev --host --port 5173'
     environment:
       - CHOKIDAR_USEPOLLING=true
     ports:
@@ -41,8 +42,6 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: docker
-      MYSQL_USER: docker
-      MYSQL_PASSWORD: docker
     volumes:
       - ./docker/database/data:/var/lib/mysql
     ports:
@@ -55,3 +54,4 @@ services:
 
 volumes:
   node_modules:
+#  vendor:
